--- a/4.Personal Portfolio/index.html
+++ b/4.Personal Portfolio/index.html
@@ -28,30 +28,48 @@
         <h2>Projects</h2>
         <div class="projects-grid">
             <div class="project-tile">
-                <img src="https://github.com/sayantan-pachal/FCC_Project/blob/main/preview/1.Tribute%20Page.jpg?raw=true" alt="City Skyline Preview" width="100%" height="85%"/>
-                <a href="https://github.com/sayantan-pachal/FCC_Project/tree/main/1.Tribute%20Page" target="_blank">Tribute Page</a>
+                <img src="https://github.com/sayantan-pachal/FCC_Project/blob/main/preview/1.Tribute%20Page.jpg?raw=true"
+                    alt="City Skyline Preview" width="100%" height="85%" />
+                <a href="https://github.com/sayantan-pachal/FCC_Project/tree/main/1.Tribute%20Page"
+                    target="_blank">Tribute Page</a>
             </div>
             <div class="project-tile">
-                <img src="https://github.com/sayantan-pachal/FCC_Project/blob/main/preview/2.Technical%20Documentation%20Page.jpg?raw=true" alt="Technical Documentation Page Preview" width="100%" height="85%"/>
-                <a href="https://github.com/sayantan-pachal/FCC_Project/tree/main/2.Technical%20Documentation%20Page" target="_blank">Technical Documentation Page</a>
+                <img src="https://github.com/sayantan-pachal/FCC_Project/blob/main/preview/2.Technical%20Documentation%20Page.jpg?raw=true"
+                    alt="Technical Documentation Page Preview" width="100%" height="85%" />
+                <a href="https://github.com/sayantan-pachal/FCC_Project/tree/main/2.Technical%20Documentation%20Page"
+                    target="_blank">Technical Documentation Page</a>
             </div>
             <div class="project-tile">
-                <img src="https://github.com/sayantan-pachal/FCC_Project/blob/main/preview/5.Survey%20Form.jpg?raw=true" alt="Survey Form Preview" width="100%" height="85%"/>
-                <a href="https://github.com/sayantan-pachal/FCC_Project/tree/main/5.Survey%20Form" target="_blank">Survey Form</a>
+                <img src="https://github.com/sayantan-pachal/FCC_Project/blob/main/preview/5.Survey%20Form.jpg?raw=true"
+                    alt="Survey Form Preview" width="100%" height="85%" />
+                <a href="https://github.com/sayantan-pachal/FCC_Project/tree/main/5.Survey%20Form"
+                    target="_blank">Survey Form</a>
             </div>
             <div class="project-tile">
-                <img src="https://github.com/sayantan-pachal/FCC_Project/blob/main/preview/6.City%20Skylin.jpg?raw=true" alt="City Skyline Preview" width="100%" height="85%"/>
-                <a href="https://github.com/sayantan-pachal/FCC_Project/tree/main/6.City%20Skyline" target="_blank">City Skyline</a>
+                <img src="https://github.com/sayantan-pachal/FCC_Project/blob/main/preview/6.City%20Skyline.jpg?raw=true"
+                    alt="City Skyline Preview" width="100%" height="85%" />
+                <a href="https://github.com/sayantan-pachal/FCC_Project/tree/main/6.City%20Skyline" target="_blank">City
+                    Skyline</a>
             </div>
             <div class="project-tile">
-                <img src="https://github.com/sayantan-pachal/FCC_Project/blob/main/preview/7.quiz-generator%20using%20python.jpg?raw=true" alt="Quiz-generator Preview" width="100%" height="85%"/>
-                <a href="https://github.com/sayantan-pachal/FCC_Project/tree/main/7.quiz-generator%20using%20python" target="_blank">Quiz-generator using python</a>
+                <img src="https://github.com/sayantan-pachal/FCC_Project/blob/main/preview/7.quiz-generator%20using%20python.jpg?raw=true"
+                    alt="Quiz-generator Preview" width="100%" height="85%" />
+                <a href="https://github.com/sayantan-pachal/FCC_Project/tree/main/7.quiz-generator%20using%20python"
+                    target="_blank">Quiz-generator using python</a>
             </div>
             <div class="project-tile">
-                <img src="https://github.com/sayantan-pachal/FCC_Project/blob/main/preview/7.quiz-generator%20using%20python.jpg?raw=true" alt="Personal Portfolio Preview" width="100%" height="85%"/>
-                <a href="https://github.com/sayantan-pachal/FCC_Project/tree/main/4.Personal%20Portfolio" target="_blank">Personal Portfolio</a>
+                <img src="https://github.com/sayantan-pachal/FCC_Project/blob/main/preview/4.Personal%20Portfolio.jpg?raw=true"
+                    alt="Personal Portfolio Preview" width="100%" height="85%" />
+                <a href="https://github.com/sayantan-pachal/FCC_Project/tree/main/4.Personal%20Portfolio"
+                    target="_blank">Personal Portfolio</a>
             </div>
         </div>
+        <div class="btn-wrapper-flex">
+            <a href="https://github.com/sayantan-pachal/FCC_Project" class="btn btn-show-all" target="_blank">
+                Show all <i class="fas fa-chevron-right"></i>
+            </a>
+        </div>
+
     </section>
 
     <footer id="contact">
