--- a/4.Personal Portfolio/index.html
+++ b/4.Personal Portfolio/index.html
@@ -52,9 +52,9 @@
                     Skyline</a>
             </div>
             <div class="project-tile">
-                <img src="https://github.com/sayantan-pachal/FCC_Project/blob/main/preview/7.quiz-generator%20using%20python.jpg?raw=true"
+                <img src="https://github.com/sayantan-pachal/FCC_Project/blob/main/preview/7.Random%20Quote%20Machine.jpg?raw=true"
                     alt="Quiz-generator Preview" width="100%" height="85%" />
-                <a href="https://github.com/sayantan-pachal/FCC_Project/tree/main/7.quiz-generator%20using%20python"
+                <a href="https://github.com/sayantan-pachal/FCC_Project/tree/main/7.Random%20Quote%20Machine"
                     target="_blank">Quiz-generator using python</a>
             </div>
             <div class="project-tile">
