--- a/4.Personal Portfolio/index.html
+++ b/4.Personal Portfolio/index.html
@@ -55,7 +55,7 @@
                 <img src="https://github.com/sayantan-pachal/FCC_Project/blob/main/preview/7.Random%20Quote%20Machine.jpg?raw=true"
                     alt="Quiz-generator Preview" width="100%" height="85%" />
                 <a href="https://github.com/sayantan-pachal/FCC_Project/tree/main/7.Random%20Quote%20Machine"
-                    target="_blank">Quiz-generator using python</a>
+                    target="_blank">Random Quote Machine</a>
             </div>
             <div class="project-tile">
                 <img src="https://github.com/sayantan-pachal/FCC_Project/blob/main/preview/4.Personal%20Portfolio.jpg?raw=true"
