--- a/4.Personal Portfolio/index.html
+++ b/4.Personal Portfolio/index.html
@@ -40,10 +40,10 @@
                     target="_blank">Technical Documentation Page</a>
             </div>
             <div class="project-tile">
-                <img src="https://github.com/sayantan-pachal/FCC_Project/blob/main/preview/5.Survey%20Form.jpg?raw=true"
+                <img src="https://github.com/sayantan-pachal/FCC_Project/blob/main/preview/8.Tic-Tac-Toe%20Game.jpg?raw=true"
                     alt="Survey Form Preview" width="100%" height="85%" />
-                <a href="https://github.com/sayantan-pachal/FCC_Project/tree/main/5.Survey%20Form"
-                    target="_blank">Survey Form</a>
+                <a href="https://github.com/sayantan-pachal/FCC_Project/tree/main/8.Tic-Tac-Toe%20Game"
+                    target="_blank">Tic-Tac-Toe Game</a>
             </div>
             <div class="project-tile">
                 <img src="https://github.com/sayantan-pachal/FCC_Project/blob/main/preview/6.City%20Skyline.jpg?raw=true"
