--- a/8.Tic-Tac-Toe Game/index.html
+++ b/8.Tic-Tac-Toe Game/index.html
@@ -4,19 +4,17 @@
 <head>
     <meta charset="UTF-8" />
     <title>Tic-Tac-Toe</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/18.3.1/umd/react.development.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/18.3.1/umd/react-dom.development.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/7.26.5/babel.min.js"></script>
-    <script data-plugins="transform-modules-umd" type="text/babel" src="index.jsx"></script>
     <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
     <div id="root"></div>
-    <script data-plugins="transform-modules-umd" type="text/babel" data-presets="react" data-type="module">
-        import { Board } from './index.jsx';
-        ReactDOM.createRoot(document.getElementById('root')).render(<Board />);
-    </script>
+    
+    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+
+    <script type="text/babel" src="index.jsx"></script>
 </body>
 
 </html>
