--- a/4.Personal Portfolio/index.html
+++ b/4.Personal Portfolio/index.html
@@ -12,6 +12,7 @@
 
 <body>
     <nav id="navbar">
+        <div class="logo">Sp</div>
         <ul>
             <li><a href="#welcome-section">Home</a></li>
             <li><a href="#projects">Projects</a></li>
@@ -34,10 +35,10 @@
                     target="_blank">Tribute Page</a>
             </div>
             <div class="project-tile">
-                <img src="https://github.com/sayantan-pachal/FCC_Project/blob/main/preview/2.Technical%20Documentation%20Page.jpg?raw=true"
-                    alt="Technical Documentation Page Preview" width="100%" height="85%" />
-                <a href="https://github.com/sayantan-pachal/FCC_Project/tree/main/2.Technical%20Documentation%20Page"
-                    target="_blank">Technical Documentation Page</a>
+                <img src="https://github.com/sayantan-pachal/FCC_Project/blob/main/preview/9.JavaScript%20Calculator.jpg?raw=true"
+                    alt="Personal Portfolio Preview" width="100%" height="85%" />
+                <a href="https://github.com/sayantan-pachal/FCC_Project/tree/main/9.JavaScript%20Calculator"
+                    target="_blank">JavaScript Calculator</a>
             </div>
             <div class="project-tile">
                 <img src="https://github.com/sayantan-pachal/FCC_Project/blob/main/preview/8.Tic-Tac-Toe%20Game.jpg?raw=true"
@@ -46,10 +47,10 @@
                     target="_blank">Tic-Tac-Toe Game</a>
             </div>
             <div class="project-tile">
-                <img src="https://github.com/sayantan-pachal/FCC_Project/blob/main/preview/6.City%20Skyline.jpg?raw=true"
+                <img src="https://github.com/sayantan-pachal/FCC_Project/blob/main/preview/10.25%20+%205%20Clock.jpg?raw=true"
                     alt="City Skyline Preview" width="100%" height="85%" />
-                <a href="https://github.com/sayantan-pachal/FCC_Project/tree/main/6.City%20Skyline" target="_blank">City
-                    Skyline</a>
+                <a href="https://github.com/sayantan-pachal/FCC_Project/tree/main/10.25%20%2B%205%20Clock"
+                    target="_blank">25 + 5 Clock</a>
             </div>
             <div class="project-tile">
                 <img src="https://github.com/sayantan-pachal/FCC_Project/blob/main/preview/7.Random%20Quote%20Machine.jpg?raw=true"
@@ -58,10 +59,10 @@
                     target="_blank">Random Quote Machine</a>
             </div>
             <div class="project-tile">
-                <img src="https://github.com/sayantan-pachal/FCC_Project/blob/main/preview/4.Personal%20Portfolio.jpg?raw=true"
-                    alt="Personal Portfolio Preview" width="100%" height="85%" />
-                <a href="https://github.com/sayantan-pachal/FCC_Project/tree/main/4.Personal%20Portfolio"
-                    target="_blank">Personal Portfolio</a>
+                <img src="https://github.com/sayantan-pachal/FCC_Project/blob/main/preview/2.Technical%20Documentation%20Page.jpg?raw=true"
+                    alt="Technical Documentation Page Preview" width="100%" height="85%" />
+                <a href="https://github.com/sayantan-pachal/FCC_Project/tree/main/2.Technical%20Documentation%20Page"
+                    target="_blank">Technical Documentation Page</a>
             </div>
         </div>
         <div class="btn-wrapper-flex">
@@ -69,7 +70,6 @@
                 Show all <i class="fas fa-chevron-right"></i>
             </a>
         </div>
-
     </section>
 
     <footer id="contact">
